feat: Add support for manifest for webhooks
