# openapi.yml
@@ -610,6 +610,7 @@ components:
       properties:
         id:
           type: string
+          readOnly: true
         name:
           type: string
         eventName:
@@ -638,6 +639,16 @@ components:
             - active
             - inactive
             - incomplete
+        jsonataExpression:
+          type: string
+          description: JSONata expression to transform the payload
+        _manifest:
+          type: array
+          description: Manifest ID used to create/update the entity
+          items:
+            type: string
+            format: uuid
+            example: 123e4567-e89b-12d3-a456-426614174000
       required:
         - name
         - eventName
@@ -897,6 +908,12 @@ components:
         correlation_id:
           type: string
           description: ID used to track the event
+        execution_id:
+          type: string
+          description: When triggered by an automation this is its execution id
+        action_id:
+          type: string
+          description: When triggered by an automation this is the id of the action
       required:
         - organization_id
 
